[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "helpner"
authors = [
    {name = "Agustín Piqueres", email = "agustin.piqueres@gmail.com"}
]
dependencies = [
    "typer>=0.7.0",
    "rich>=12.6.0",
    "spacy>=3.4.4"
]

license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]
readme = "README.md"
dynamic = ['version', 'description']

[project.optional-dependencies]
test = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "nox>=2022.11.21"
]
dev = [
    "black",
    "mypy",
    "isort"
]
all = [
    "pandas>=1.5.2"  # For the initial scripts
]

[project.scripts]
helpner = "helpner.main:app"

[project.urls]
Source = "https://github.com/plaguss/helpner"

[tool.pytest]
addopts = ["--cov=helpner", "--cov-report html"]