[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "helpner"
authors = [
    {name = "Agustín Piqueres", email = "agustin.piqueres@gmail.com"}
]
dependencies = [
    "spacy>=3.5.0",
    "rich>=12.6.0",
]

license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]
readme = "README.md"
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
    "pytest>=7.2.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.0.1",
    "nox>=2022.11.21"
]
dev = [
    "black",
    "mypy",
    "isort",
    "pandas>=1.5.2"  # For the initial scripts
]
all = [
]

[project.scripts]
helpner = "helpner.main:app"

[project.urls]
Source = "https://github.com/plaguss/helpner"

[tool.pytest]
addopts = ["--cov=helpner", "--cov-report html"]