[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "helpner"
authors = [
    {name = "Agustín Piqueres", email = "agustin.piqueres@gmail.com"}
]
dependencies = [
    "spacy>=3.5.0",
    "rich>=12.6.0",
]

license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
readme = "README.md"
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.1.0",
    "nox>=2022.11.21"
]
dev = [
    "black",
    "mypy",
    "ruff"
]

[project.scripts]
helpner = "helpner.main:app"

[project.urls]
Source = "https://github.com/plaguss/helpner"

[tool.pytest]
addopts = ["--cov=helpner", "--cov-report=term-missing"]

[tool.ruff]
# Enable Pyflakes and pycodestyle rules.
select = ["E", "F", "I001"]
line-length = 88  # Same as black
# Assume Python 3.11.
target-version = "py311"

[tool.ruff.pydocstyle]
convention = "google" 
